# arrays

./: .hlint.yaml  arrays.cabal  default.nix  hie.yaml  release.nix  shell.nix
nix/: nixpkgs.nix  pkgs.nix
nix/exts/: arrays.nix
nix/pkgs/: array-exceptions.nix
src/Data/: Array.hs  MutArray.hs
src/Data/Array/: Prim.hs
src/Data/MutArray/: Prim.hs
test/: Test.hs
test/Test/: Array.hs  Core.hs  Gen.hs
