cabal-version: 2.4

name:        arrays
category:    Data
version:     1.0.0
synopsis:    TODO
description: TODO

author:       jacob leach
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/arrays
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.4

source-repository head
  type:     git
  location: https://github.com/riz0id/arrays

common common
  default-language: Haskell2010

  default-extensions:
    BangPatterns BlockArguments DataKinds DeriveDataTypeable DeriveGeneric 
    DeriveLift ImportQualifiedPost MagicHash StandaloneKindSignatures 
    UnboxedTuples

  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wmissing-export-lists

    -ddump-to-file
    -ddump-stg-final
    -ddump-simpl
    -dppr-cols=120
    -dsuppress-module-prefixes
    -dsuppress-uniques

  build-depends:
    , base >= 4.15.1 && < 4.17

library
  import:         common
  hs-source-dirs: src

  ghc-options:
    -- `-j4` is set (as opposed to `-j`) due to the small number of modules that 
    -- are exported by this package.
    -j

    -- `-O` is explicitly set since none of the functions exported by this 
    -- library would benefit from higher optimization levels. This helps reduce 
    -- compile times. 
    -O2

    -- `-fmax-simplifier-iterations` is set to keep compile times in check. 
    -- The functions in this library are simple and do not need very many 
    -- simplifier passes.
    -fmax-simplifier-iterations=20

  build-depends:
    , array-exceptions >= 1.0.0  && < 1.1
    , ghc-prim         >= 0.7.0  && < 0.9
    , primitive        >= 0.7.3  && < 0.8
    , prim-bool        >= 1.0.1  && < 1.1
    , prim-compat      >= 1.0.0  && < 1.1
    , template-haskell >= 2.17.0 && < 2.19

  exposed-modules:
    Data.Array 
    Data.Array.Prim
    Data.MutArray 
    Data.MutArray.Prim

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  default-extensions:

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

  build-depends:
    , arrays
    , array-exceptions
    , hedgehog
    , tasty
    , tasty-hedgehog 

  other-modules: 
    Test.Array
    Test.Compat
    Test.Core
    Test.Gen

